--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
       Merci de vous inscrire sur <a href="https://public.etherpad-mozilla.org/p/TupperVim-1803">l'etherpad</a>.
       </dd>
     </dl>
+    <dl>
+      <dt>Nantes</dt>
+      <dd> le <strong><a href="https://public.etherpad-mozilla.org/p/TupperVimNantes-21032018">mercredi
+      21 mars de 19h à 22h</a></strong> dans les locaux de
+      <strong><a href="https://www.lafourchette.com/">La Fourchette</a></strong> 35 rue de Crucy, Nantes
+      (pas loin de toutes les lignes)<br />
+      Merci de vous inscrire sur <a href="https://public.etherpad-mozilla.org/p/TupperVim-1803">l'etherpad</a>
+        ou <a href="https://www.meetup.com/TupperVim-Nantes/events/248382653/">la page meetup</a>.
+      </dd>
+    </dl>    
     <p>
       Les sessions sont annoncées « officiellement » sur la
       <a href="http://mozfr.org/pipermail/tuppervim/">liste de diffusion</a>
